Fix styling on mobile user manage page buttons

--- a/frontend/src/styles/UserCardList.css
+++ b/frontend/src/styles/UserCardList.css
@@ -31,7 +31,6 @@
   /* justify-content: space-between; */
   justify-content: space-evenly;
   width: 100%;
-  height: 40px;
   box-shadow: 0px 1px 15px rgba(0, 0, 0, 0.1);
   padding: 10px 40px;
   margin-bottom: 10px;
@@ -46,19 +45,13 @@
   line-height: 18px;
   text-align: center;
   font-family: "Lato", sans-serif;
+  padding-bottom: 5px;
 
   border-bottom: 1px solid transparent;
   color: #75787b;
 }
 
-.toggle_btn_selected {
-  background-color: transparent;
-  border: 0px;
-  font-size: 15px;
-  line-height: 18px;
-  text-align: center;
-  font-family: "Lato", sans-serif;
-
+.toggle_btn.selected {
   border-bottom: 1px solid #0057b8;
   color: #0057b8;
 }
